hard-gists/3004168/run.log
=== Docker Run Log for 3004168 ===
Started at: Mi 29. Okt 13:35:36 CET 2025

[2025-10-29 13:35:37] START: Running container for 3004168
[2025-10-29 13:35:37] SUCCESS: Container 528b35a92193e6a96ba8eaa14a994a6308717f7ecd244841357277d3dea0793b started for 3004168
=== Container logs for 3004168 ===
  File "/snippet.py", line 372
    s = struct.pack('!L', nameLength | 0x80000000L)
                                                ^
SyntaxError: invalid hexadecimal literal
=== End of logs for 3004168 ===
[2025-10-29 13:35:39] INFO: Container 528b35a92193e6a96ba8eaa14a994a6308717f7ecd244841357277d3dea0793b has stopped
